app/styles/scss/_components/_sidebar.scss
.sidebar {
  height: 100%;
  height: 100vh;
  padding: $space-xl;
  display: flex;
  justify-content: center;
  flex-direction: column;
  font-size: 1.25em;
  color: $text-light;
  background: $secondary;
  font-family: $ff-serif;
  line-height: 1.2;
  text-align: center;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  box-shadow: 0 2px 2px rgba($grey-900, 0.4), 0 2px 5px 0 rgba($grey-900, 0.25);
  &--slide {
    position: fixed;
    width: 90%;
    box-shadow: 2px 0 2px rgba($grey-900, 0.4), 2px 0 5px 0 rgba($grey-900, 0.25);
    transform: translateX(-101%);
    transition: transform 0.2s ease-out;
    @include mq-md {
      transform: translateX(0);
    }
  }
  @include mq-md {
    position: fixed;
    width: $sidebar-width;
    padding: $space-md;
    font-size: 1.125em;
    text-align: left;
    // box-shadow: 3px 0 4px 1px rgba($grey-700, 0.5);
    box-shadow: 2px 0 2px rgba($grey-700, 0.5), 2px 0 5px 0 rgba($grey-700, 0.3);
  }
  @include mq-lg {
    padding: $space-xl;
    width: $sidebar-width-max;
    font-size: 1.25em;
  }
  &__title {
    position: relative;
    display: inline-block;
    margin-left: auto;
    margin-right: auto;
    align-self: flex-start;
    font-size: $font-scale-lg;
    white-space: nowrap;
    text-shadow: 1px 1px 1px $grey-700;
    z-index: 10;
    @include stripes;
    @include mq-md {
      margin-left: 0;
      margin-right: 0;
      font-size: $font-scale-lg;
    }
    @include mq-lg {
      font-size: $font-scale-xl;
    }
  }
  &__content {
    line-height: inherit;
  }
}

.js-sidebar--open {
  transform: translateX(0);
}

.sidebar-toggle {
  position: fixed;
  bottom: 0;
  left: 0;
  margin-left: $space-md;
  margin-bottom: $space-md;
  padding: $space-xs;
  display: flex;
  align-items: center;
  justify-content: center;
  width: 3em;
  height: 3em;
  background: $tertiary;
  color: $white;
  border: none;
  border-radius: 2px;
  box-shadow: 0 1px 1px rgba($grey-900, 0.4), 0 2px 5px 0 rgba($grey-900, 0.25);
  z-index: 100;
  -webkit-tap-highlight-color: transparent; // Disable mobile tap outline
  transition: all 0.1s;
  @include mq-md {
    display: none;
  }
  &:focus {
    outline-color: $primary;
  }
  &:focus:hover {
    outline: none;
  }
  &:hover {
    background: darken($tertiary, 8%);
  }
  &:active {
    // background: darken($tertiary, 16%);
    transform: translateY(2px);
  }
}

